# praxis

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  NETWORK_ANALYSIS_GUIDE.md  README.md  RELATIONSHIP_INFERENCE_SUMMARY.md  WORK_BASED_DISCOVERY_GUIDE.md  WORK_DISCOVERY_SUMMARY.md  bedrock_strands.ipynb  check_database_structure.py  create_coauthorship_relationships.py  demo_network_analysis.py  demo_relationship_inference.py  demo_work_based_discovery.py  docker-compose.yml  enhanced_relationship_agent.py  fix_relationship_direction.py  neo4j_aura.ipynb  network_analysis_agent.py  pyalex.ipynb  pyproject.toml  requirements.txt  research_query_agent.py  run_relationship_tests.py  setup.py  streamlit_app.py  test_author_relationship_inference.py  test_research_query_agent.py  test_work_discovery.py  work_based_relationship_agent.py
.kiro/specs/notebook-to-script-conversion/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
research_graph_rag/: README.md  __init__.py  cli.py
research_graph_rag/agents/: __init__.py  base_agent.py  network_agent.py  relationship_agent.py  work_discovery_agent.py
research_graph_rag/core/: __init__.py  config.py  database.py  models.py
research_graph_rag/utils/: __init__.py  exceptions.py  gds_queries.py  validators.py
tests/: __init__.py  test_config.py  test_validators.py
