[project]
name = "praxis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bcliffwm",email = "bocliffwm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.2)",
    "aiosignal (==1.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.0)",
    "asttokens (==3.0.1)",
    "attrs (==25.4.0)",
    "aws-requests-auth (==0.4.3)",
    "beautifulsoup4 (==4.14.3)",
    "boto3 (==1.42.0)",
    "botocore (==1.41.6)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.4)",
    "certifi (==2025.11.12)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "cleo (==2.1.0)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "crashtest (==0.4.1)",
    "cryptography (==46.0.3)",
    "debugpy (==1.8.17)",
    "decorator (==5.2.1)",
    "dill (==0.4.0)",
    "distlib (==0.4.0)",
    "docstring-parser (==0.17.0)",
    "dulwich (==0.24.10)",
    "executing (==2.2.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.20.0)",
    "findpython (==0.7.1)",
    "frozenlist (==1.8.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.3)",
    "idna (==3.11)",
    "importlib-metadata (==8.7.0)",
    "installer (==0.7.0)",
    "ipykernel (==7.1.0)",
    "ipython (==9.7.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jedi (==0.19.2)",
    "jmespath (==1.0.1)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.9.1)",
    "keyring (==25.7.0)",
    "markdown-it-py (==4.0.0)",
    "markdownify (==1.2.2)",
    "matplotlib-inline (==0.2.1)",
    "mcp (==1.22.0)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.8.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.2)",
    "multidict (==6.7.0)",
    "neo4j (==6.0.3)",
    "nest-asyncio (==1.6.0)",
    "opentelemetry-api (==1.38.0)",
    "opentelemetry-instrumentation (==0.59b0)",
    "opentelemetry-instrumentation-threading (==0.59b0)",
    "opentelemetry-sdk (==1.38.0)",
    "opentelemetry-semantic-conventions (==0.59b0)",
    "packaging (==25.0)",
    "parso (==0.8.5)",
    "pbs-installer (==2025.12.5)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.5.0)",
    "poetry (==2.2.1)",
    "poetry-core (==2.2.1)",
    "prompt-toolkit (==3.0.52)",
    "propcache (==0.4.1)",
    "psutil (==7.1.3)",
    "pure-eval (==0.2.3)",
    "pyalex (==0.19)",
    "pycparser (==2.23)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.19.2)",
    "pyjwt (==2.10.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "pywin32 (==311)",
    "pywin32-ctypes (==0.2.3)",
    "pyzmq (==27.1.0)",
    "rapidfuzz (==3.14.3)",
    "referencing (==0.37.0)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rich (==14.2.0)",
    "rpds-py (==0.30.0)",
    "s3transfer (==0.16.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "slack-bolt (==1.27.0)",
    "slack-sdk (==3.39.0)",
    "soupsieve (==2.8)",
    "sse-starlette (==3.0.3)",
    "stack-data (==0.6.3)",
    "starlette (==0.50.0)",
    "strands-agents (==1.18.0)",
    "strands-agents-tools (==0.2.16)",
    "sympy (==1.14.0)",
    "tenacity (==9.1.2)",
    "tomlkit (==0.13.3)",
    "tornado (==6.5.2)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.12.1.14)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.38.0)",
    "virtualenv (==20.35.4)",
    "watchdog (==6.0.0)",
    "wcwidth (==0.2.14)",
    "wrapt (==1.17.3)",
    "yarl (==1.22.0)",
    "zipp (==3.23.0)",
    "zstandard (==0.25.0)",
    "hypothesis (>=6.151.2,<7.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "hypothesis (>=6.151.2,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
